# babble-foundry

./: .gitignore  README.md  pyproject.toml
babble_foundry/: __init__.py  openrouter.py
babble_foundry/clossal_cave/: .gitignore  CLAUDE.md  game.py
notebooks/: 1_intro.ipynb
notebooks/1_llm_calling/: 1_basic_calls_and_streaming.ipynb  2_async_calls_and_caching.ipynb  2a_prompt_caching.ipynb  3_structured_output.ipynb  4_tool_calling.ipynb
notebooks/clossal_cave/: CLAUDE.md  play_game.py  test.ipynb
notebooks/clossal_cave/claude_code/: .gitignore  CLAUDE.md
